--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: pictograms
 description: "A new Pictograms based on Picto_Widget"
-version: 0.0.1
-homepage: https://github.com/
+version: 1.0.0
+homepage: https://github.com/DecksPlayer/pictograms
 
 environment:
   sdk: ^3.5.3
