--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: pictograms
 description: "A new Pictograms based on Picto_Widget"
-version: 1.0.5
+version: 1.0.10
 homepage: https://github.com/DecksPlayer/pictograms
-
+documentation:
 environment:
   sdk: ^3.5.3
   flutter: ">=1.17.0"
